# PowerPlatform-DataverseClient-Python

./: .flake8  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  PIPELINE_SETUP.md  README.md  README_TYPED.md  RETRY_LOGIC_SUMMARY.md  SUPPORT.md  dev_dependencies.txt  pyproject.toml  requirements.txt
.azdo/: ci-pr.yaml
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: copilot-instructions.md
.github/workflows/: ado-pipeline-yaml-pr-warning.yml  python-package.yml
Types_demo/: __init__.py  account.py
architecture/: async_design.md
docs/: spec-module-level-exports.md
docs/design/: async-design.md  async-implementation-options.md  relationships_integration.md
examples/: README.md  __init__.py  common.py  inline_lookup_example.py  quickstart.py  quickstart_custom_api.py  quickstart_file_upload.py  quickstart_pandas.py  relationship_example.py  telemetry_demo.py
examples/advanced/: __init__.py  alternate_keys_upsert.py  async_walkthrough.py  batch.py  chunking_concurrency_walkthrough.py  complete_walkthrough.py  contextvar_thread_demo.py  dataframe_operations.py  datascience_risk_assessment.py  fetch_xml.py  fetchxml.py  file_upload.py  pandas_integration.py  perf_benchmark_live.py  perf_benchmark_sync_vs_async.py  prodev_quick_start.py  relationships.py  sql_examples.py  test_querybuilder_live.py  walkthrough.py  walkthrough_typed.py
tests/: BUG_BASH_PLAN.md  __init__.py  conftest.py  test_create_single_guid.py  test_feature_flags.py  test_http_errors.py  test_logical_crud.py  test_sql_parse.py
tools/: migrate_v0_to_v1.py
(+243 files in other folders)
